# AOC-2022-hs

./: AOC2022-hs.cabal  README.md  hie.yaml  package.yaml  stack.yaml
.github/workflows/: haskell.yml
app/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Utils.hs
inputs/: day1.inp
tests/: OutputTest.hs  Spec.hs  TestUtils.hs
