cabal-version:      2.4
name:               AOC2022-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Solutions to AOC 2022 in haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rdvdev2
maintainer:         me@rdvdev2.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:

common common-options
    build-depends:    base ^>=4.18.0.0,
                      split ^>=0.2.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    other-modules:    Utils

executable day1
    import:           common-options
    main-is:          Day1.hs

executable day2
    import:           common-options
    main-is:          Day2.hs

executable day3
    import:           common-options
    main-is:          Day3.hs
